Added functionality for users to reset their passwords after 3 password mistakes in 10 minutes at login page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -146,7 +146,7 @@ input[name="accountType"]{
     font-size: 20px;
     color: #999;
 }
-#passwordLogin:focus + .toggle-password:before {
+#passwordLogin:focus + .toggle-password:before, #resetPasswordLogin:hover + .toggle-password:before {
     color: #333;
 }
 .openedEye,.closedEye{
