--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -149,6 +149,9 @@ input[name="accountType"]{
 #passwordLogin:focus + .toggle-password:before, #resetPasswordLogin:hover + .toggle-password:before,#currentPassword:hover + .toggle-password:before {
     color: #333;
 }
+.font-small {
+    word-wrap: break-word; /* wrap long words */
+}
 .openedEye,.closedEye{
     font-size: 20px;
     cursor: pointer;
@@ -199,6 +202,24 @@ input[name="accountType"]{
 #progressDetailsBar .progress{
     border-radius: 10px;
     height: 20px;
+}
+.singleFilter{
+    margin-right: 10px;
+    background: #e1ffe0;
+    padding: 7px 15px;
+    font-weight: 700;
+    border-radius: 10px;
+    color: black;
+}
+.deleteSingleFilter{
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+background: #1a202c;
+    color: #FFFFFF;
+    border-radius: 10px;
+    padding: 5px 5px;
+    font-weight: 700;
+width: 30px;
 }
 /*** Spinner ***/
 #spinner {
