Adding global search at home page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -221,6 +221,70 @@ background: #1a202c;
     font-weight: 700;
 width: 30px;
 }
+.search-container {
+    position: relative;
+    width: 600px;
+
+}
+#searchResults{
+    position: absolute;
+    width: 600px;
+    /*center a div below .search-container input text*/
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 100;
+    height: 210px;
+    overflow-y: auto;
+}
+.search-container input[type="text"] {
+    width: 600px;
+    padding: 20px 50px;
+    border: 1px solid #ccc;
+    border-radius: 10px 10px 0 0;
+    outline: none;
+}
+.search-container .search-icon {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    margin-left: 10px;
+    transform: translateY(-50%);
+    width: 20px;
+}
+.search-result{
+    width: 100%;
+    padding: 10px;
+    height: 70px;
+    background: #FFFFFF;
+    z-index: 100;
+}
+.search-result p{
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.titleResult{
+    font-weight: 700;
+    margin-bottom: 2px;
+    font-size: 17px;
+}
+.search-result p{
+    font-size: 14px;
+    font-weight: 100;
+    color: #999999;
+}
+.iconResult{
+    font-size: 20px;
+    width: 30px;
+}
+.search-result:hover{
+    background: #f0f0f0;
+}
+.linkSearch{
+    cursor: pointer;
+}
+#lastSearchResult{
+    border-radius: 0 0 10px 10px;
+}
 /*** Spinner ***/
 #spinner {
     opacity: 0;
